# SDL2_Playground

./: CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
include/sp/: Shader.h  ShaderProgram.h  Window.h
shaders/: basic.frag  basic.vert
src/: ShaderProgram.cpp  Window.cpp  glad.c  main.cpp
